--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,10 +12,19 @@ body {
   margin-right: 30px;
 }
 
+.panel-heading{
+  visibility: hidden;
+}
+
+.panel-default{
+  visibility: hidden;
+}
+
 #appBuckets {
   overflow: hidden;
   width: 100%;
   height: calc(100vh - 150px);
+  visibility: hidden;
 }
 
 #forgeViewer {
