--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,10 @@ body {
   margin-right: 30px;
 }
 
+.adsk-viewing-viewer #toolbar-modelStructureTool{display:none!important}
+.adsk-viewing-viewer #toolbar-explodeTool{display:none!important}
+.adsk-viewing-viewer #toolbar-measurementSubmenuTool{display:none!important}
+
 .panel-heading{
   /*visibility: hidden;*/
 }
